--- a/greeting.properties
+++ b/greeting.properties
@@ -1,5 +1,4 @@
 spring.greeting: Hello
 spring.shit: shit
-spring.greetings:
-  EN: Hello
-  CN: 你好
+spring.greetings.EN: Hello
+spring.greetings.CN: 你好
